[package]
name = "secure-spots-cola"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.61", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
confy = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
colored = "3.1.1"

[[bin]]
name = "ssc"
path = "src/main.rs"
